--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "chai": "1.x.x",
+    "chai-things": "^0.2.0",
     "coveralls": "^2.11.4",
     "istanbul": "^0.4.0",
     "mocha": "^1.21.5",
