added dependency to sails-reverse-routing, added readme

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "main": "./lib",
   "dependencies": {
     "lodash": "^3.10.1",
-    "sails-util": "^0.10.6"
+    "sails-util": "^0.10.6",
+    "sails-reverse-routing": "^1.0.12"
   },
   "devDependencies": {
     "chai": "1.x.x",
