--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
   "main": "./lib",
   "dependencies": {
     "lodash": "^3.10.1",
-    "sails-util": "^0.10.6"
+    "sails-util": "^0.11.0"
   },
   "optionalDependencies": {
     "sails-reverse-routing": "^1.0.12"
   },
   "devDependencies": {
-    "chai": "1.x.x",
+    "chai": "3.4.1",
     "chai-things": "^0.2.0",
     "coveralls": "^2.11.4",
     "istanbul": "^0.4.0",
-    "mocha": "^1.21.5",
+    "mocha": "^2.3.4",
     "mocha-lcov-reporter": "^1.0.0",
     "rewire": "^2.4.0",
     "sinon": "^1.17.2",
